lanzamiento de ec2 prueba num 4

--- a/infra-chaostoolkit/ec2.yaml
+++ b/infra-chaostoolkit/ec2.yaml
@@ -57,7 +57,7 @@ Resources:
       DisableApiTermination: false
       IamInstanceProfile: !Ref rperfilRole
       ImageId: !Ref pAMI
-      InstanceMonitoring: true
+      Monitoring: true
       InstanceType: !Ref pTipoDeInstancia
       SubnetId: !Ref rSubnetPublica1
       SecurityGroups:
