--- a/infra-chaostoolkit/infra-ejecutar-caos.yaml
+++ b/infra-chaostoolkit/infra-ejecutar-caos.yaml
@@ -122,9 +122,10 @@ Resources:
               - ec2.amazonaws.com
             Action:
               - 'sts:AssumeRole'
-      Description: Rol que permite la conexion por SSM, a S3 y a cloudwatch
+      Description: Rol que permite la conexion por SSM, a S3 y a cloudwatch 
       ManagedPolicyArns: 
         - 'arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore'
+        - 'arn:aws:iam::aws:policy/AmazonEC2FullAccess'
         - 'arn:aws:iam::aws:policy/AmazonS3FullAccess'
         - 'arn:aws:iam::aws:policy/CloudWatchAgentServerPolicy'
       RoleName: !Join ["-", [ Ref: "AWS::StackName" , "RoleEc2" ]]
