se añade multiAZ

--- a/infra-chaostoolkit/RDS-prueba.yaml
+++ b/infra-chaostoolkit/RDS-prueba.yaml
@@ -127,6 +127,7 @@ Resources:
       EngineVersion: '8.0.16'
       MasterUsername: admin
       MasterUserPassword: admindbtaller
+      MultiAZ: true
       VPCSecurityGroups:
       - !GetAtt rSGRDS.GroupId
       BackupRetentionPeriod: '1'
