modificacion de user data

--- a/infra-chaostoolkit/infra-ejecutar-caos.yaml
+++ b/infra-chaostoolkit/infra-ejecutar-caos.yaml
@@ -67,12 +67,9 @@ Resources:
           #!/bin/bash
           sudo su
           systemctl restart amazon-ssm-agent
-          fallocate -l 1024M /swapfile
-          chmod 600 /swapfile
-          mkswap /swapfile
-          swapon /swapfile
-          mkdir -v ~/.venvs && python3 -m venv ~/.venvs/chaostk
-          source ~/.venvs/chaostk/bin/activate
+          cd /
+          mkdir my-experiments && cd my-experiments
+          python3 -m venv .venv && source .venv/bin/activate && python3 -m pip install --upgrade pip
           pip install -U pip3
           pip3 install -U chaostoolkit
           pip3 install -U chaostoolkit-kubernetes
@@ -81,21 +78,6 @@ Resources:
           pip3 install -U chaostoolkit-dynatrace
           sudo amazon-linux-extras install docker
           sudo amazon-linux-extras install epel
-          #cat <<EOF | sudo tee /etc/yum.repos.d/kubernetes.repo
-          #[kubernetes]
-          #name=Kubernetes
-          #baseurl=https://packages.cloud.google.com/yum/repos/kubernetes-el7-x86_64
-          #enabled=1
-          #gpgcheck=1
-          #repo_gpgcheck=1
-          #gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
-          #EOF
-          #sudo yum -y install kubectl
-          curl -o kubectl https://amazon-eks.s3.us-west-2.amazonaws.com/1.21.2/2021-07-05/bin/linux/amd64/kubectl
-          chmod +x ./kubectl
-          mkdir -p $HOME/bin && cp ./kubectl $HOME/bin/kubectl && export PATH=$PATH:$HOME/bin
-          echo 'export PATH=$PATH:$HOME/bin' >> ~/.bashrc
-          kubectl version --short --client
           curl -fsSL https://rpm.nodesource.com/setup_16.x | bash -
           sudo yum -y install nodejs
           sudo yum -y install cairo-devel
@@ -103,12 +85,7 @@ Resources:
           pip3 install -U jsonschema
           pip3 install -i https://test.pypi.org/simple/ chaosk8-stress-instances==0.2.7
           pip3 install -U chaostoolkit-lib[jsonpath]
-          cd ~/.venvs/chaostk/bin/
-          sudo mkdir -v /usr/bin/chaostemplates
-          sudo bash
-          echo "alias envchaos='source ~/.venvs/chaostk/bin/activate'" >>~/.bashrc
-          echo "alias chaosrun='chaos run --rollback-strategy=always'" >>~/.bashrc
-          cat ~/.bashrc
+          cd /
 
   rRoleIAM:
     Type: AWS::IAM::Role
